# niko-cli

./: Cargo.toml  readme.md
src/: command.rs  error.rs  main.rs  projects.rs  server.rs  wasm_pack.rs  watcher.rs
templates/: .gitignore.template  Cargo.toml.template  index.html.template  index.js.template
templates/src/: lib.rs.template
