[package]
name = "niko-cli"
version = "0.1.0"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"
license = "MIT"
description = "the niko wasm game engine tools"
homepage = "https://github.com/niko-rs/niko-cli"
repository = "https://github.com/niko-rs/niko-cli"
documentation = "https://docs.rs/niko-cli"
keywords = ["game", "engine", "framework", "gamedev"]
categories = ["game-engines"]
readme = "readme.md"

[dependencies]
